--- a/notebooks/harmbench.ipynb
+++ b/notebooks/harmbench.ipynb
@@ -8,31 +8,20 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "import random\n",
-    "import itertools\n",
     "import torch\n",
-    "import tqdm.auto as tqdm\n",
     "import wandb\n",
+    "import sys\n",
     "\n",
-    "from datasets import load_dataset\n",
     "from dotenv import load_dotenv\n",
-    "from itertools import cycle\n",
     "from peft import AutoPeftModelForCausalLM\n",
     "from torch.utils.data import DataLoader\n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "from peft import get_peft_model, LoraConfig\n",
-    "import pickle\n",
-    "import numpy as np\n",
-    "from collections import defaultdict\n",
-    "import torch\n",
     "\n",
     "load_dotenv()\n",
     "hf_access_token = os.getenv(\"HUGGINGFACE_API_KEY\")\n",
     "\n",
-    "\n",
-    "import sys\n",
     "os.chdir(\"../\")\n",
     "cwd = os.getcwd()\n",
     "if cwd not in sys.path:\n",
@@ -129,7 +118,10 @@
     "        tokenizer.pad_token_id,\n",
     "        truncate_length=2048\n",
     "    )\n",
-    ")"
+    ")\n",
+    "\n",
+    "def post_def_callback(losses, epoch):\n",
+    "    wandb.log(losses)"
    ]
   },
   {
@@ -138,10 +130,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def post_def_callback(losses, epoch):\n",
-    "    wandb.log(losses)\n",
-    "\n",
-    "\n",
     "pgd_trainer = ProjectedGradLAT(\n",
     "    model=llama,\n",
     "    dataloader=make_lat_dataloader(batch_size=2),\n",
