--- a/notebooks/harmbench.ipynb
+++ b/notebooks/harmbench.ipynb
@@ -32,6 +32,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -57,6 +64,13 @@
     "    ],\n",
     ")\n",
     "llama = get_peft_model(llama, peft_config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get data"
    ]
   },
   {
@@ -125,6 +139,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Set up trainer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -167,6 +188,13 @@
     "    device=\"cuda\",\n",
     "    reinitialize_dev_optim=True,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run!"
    ]
   },
   {
