--- a/notebooks/satml_backdoors.ipynb
+++ b/notebooks/satml_backdoors.ipynb
@@ -40,6 +40,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -155,6 +162,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -188,6 +202,13 @@
     "    wandb.log(result)\n",
     "    if (epoch+1) % (num_steps // 4) == 0 and epoch != -1:\n",
     "        model.save_pretrained(f\"run_checkpoints/{save_folder}/{model_name.split('/')[-1]}_{epoch+1}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Set up trainer"
    ]
   },
   {
@@ -229,7 +250,22 @@
     "    model_layers_module=\"base_model.model.model.layers\",\n",
     "    reinitialize_dev_optim=False,\n",
     "    device=device\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pgd_trainer.train(project_name=\"satml_backdoor_removal\")"
    ]
   }
