pruned unused code + make deepspeed and TL integrations optional + added sentencepiece

--- a/notebooks/satml_backdoors.ipynb
+++ b/notebooks/satml_backdoors.ipynb
@@ -9,30 +9,23 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import os\n",
-    "import random\n",
-    "import itertools\n",
     "import torch\n",
     "import tqdm as tqdm\n",
     "import wandb\n",
     "import sys\n",
     "\n",
-    "from datasets import load_dataset\n",
     "from dotenv import load_dotenv\n",
-    "from itertools import cycle\n",
-    "from peft import AutoPeftModelForCausalLM\n",
     "from torch.utils.data import DataLoader\n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "from peft import get_peft_model, LoraConfig\n",
     "\n",
-    "os.chdir(\"/workspace/HarmBench-goose/latent-adversarial-training\")\n",
+    "# os.chdir(\"/workspace/HarmBench-goose/latent-adversarial-training\")\n",
+    "os.chdir(\"../\")\n",
     "cwd = os.getcwd()\n",
     "if cwd not in sys.path:\n",
     "    sys.path.insert(0, cwd)\n",
     "\n",
     "from latent_at import *\n",
-    "\n",
-    "from tasks.harmbench.HarmBenchTask import HarmBenchTask, safe_completions, gcg_behavior_modify_fn\n",
-    "from tasks.harmbench.FastHarmBenchEvals import run_attack_evals, run_general_evals\n",
     "\n",
     "\n",
     "load_dotenv()\n",
@@ -89,13 +82,13 @@
     "\n",
     "model_id = 0\n",
     "device_id = 0\n",
-    "use_dpo = True\n",
-    "use_backdoors = True\n",
+    "use_dpo = False\n",
+    "use_backdoors = False\n",
     "save_folder = \"./model_saves\"\n",
     "\n",
     "# Print the settings for confirmation\n",
-    "print(f\"Using DPO: {use_dpo}\")\n",
-    "print(f\"Using backdoors: {use_backdoors}\")\n",
+    "print(f\"Using DPO only (no LAT): {use_dpo}\")\n",
+    "print(f\"Using proxy backdoors: {use_backdoors}\")\n",
     "print(f\"Model save folder: {save_folder}\")\n",
     "\n",
     "device = f\"cuda:{device_id}\"\n",
@@ -177,7 +170,6 @@
     "\n",
     "model_name = model_cfg[\"model\"]\n",
     "model_dtype = torch.bfloat16\n",
-    "run_start_evals = False\n",
     "\n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
     "    model_name,\n",
@@ -217,7 +209,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "pgd_trainer = ProjectedGradLAT(\n",
     "    model=model,\n",
     "    dataloader=lat_dataloader,\n",
@@ -286,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
