added map_fn to datasets for satml

--- a/notebooks/satml_backdoors.ipynb
+++ b/notebooks/satml_backdoors.ipynb
@@ -19,8 +19,8 @@
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "from peft import get_peft_model, LoraConfig\n",
     "\n",
-    "# os.chdir(\"/workspace/HarmBench-goose/latent-adversarial-training\")\n",
-    "os.chdir(\"../\")\n",
+    "os.chdir(\"/workspace/HarmBench-goose/latent-adversarial-training\")\n",
+    "\n",
     "cwd = os.getcwd()\n",
     "if cwd not in sys.path:\n",
     "    sys.path.insert(0, cwd)\n",
@@ -117,7 +117,7 @@
     "    split=\"train\",\n",
     "    filter_len=512,\n",
     "    use_tokenizer_template=False,\n",
-    "    # map_fn=map_fn, # TODO: fix this\n",
+    "    map_fn=map_fn,\n",
     ")\n",
     "\n",
     "lat_dataloader = DataLoader(\n",
