--- a/notebooks/whp_plots.ipynb
+++ b/notebooks/whp_plots.ipynb
@@ -19,6 +19,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "#SC: delete this whole nb I think\n",
+    "\n",
     "def remove_id_name(model_name):\n",
     "    return \"_\".join(model_name.split(\"_\")[:-1]), model_name.split(\"_\")[-1]\n",
     "\n",
