--- a/notebooks/latent_adversarial_attack.ipynb
+++ b/notebooks/latent_adversarial_attack.ipynb
@@ -4,9 +4,9 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "# Improving Jailbreak Robustness with LAT\n",
+    "# Latent Space Adversarial Attack\n",
     "\n",
-    "This notebook uses LAT to greatly improve over refusal training's ability to make an LLM robust to jailbreaks.\n",
+    "This notebook demonstrates conducting a latent space adversarial attacks on LLMs. These particualr demo attacks are created using projected gradient descent to make a model more jailbreakable. \n",
     "\n",
     "## Imports"
    ]
@@ -136,7 +136,7 @@
     "    func_categories=[\"standard\", \"contextual\"]\n",
     ")\n",
     "\n",
-    "# train_behaviors = advbench_data.train_behaviors + harmbench_data.train_behaviors\n",
+    "# train_behaviors = advbench_data.train_behaviors + harmbench_data.train_behaviors  \n",
     "\n",
     "sys_prompt = \"\"\"You are a helpful, respectful and honest assistant. Always answer as helpfully as possible, while being safe. Your answers should not include any harmful, unethical, racist, sexist, toxic, dangerous, or illegal content. Please ensure that your responses are socially unbiased and positive in nature.\n",
     "\n",
@@ -170,7 +170,7 @@
     "\n",
     "lat_dataloader = DataLoader(\n",
     "    lat_dataset,\n",
-    "    batch_size=16,\n",
+    "    batch_size=4,\n",
     "    shuffle=True,\n",
     "    drop_last=True,\n",
     "    collate_fn=LatentAdversarialTrainingDataCollator(\n",
@@ -179,36 +179,14 @@
     "    )\n",
     ")\n",
     "\n",
-    "# interleaving supervised finetuning with LAT stablizes training\n",
-    "sft_dataset = process_generic_chat_dataset(\n",
-    "    tokenizer,\n",
-    "    dataset=\"abhayesian/ultrachat-first-response-long\",\n",
-    "    adv_column=\"refusal\",\n",
-    "    def_column=\"response\",\n",
-    "    split=\"train\",\n",
-    "    use_tokenizer_template=use_tokenizer_template,\n",
-    "    system_prompt=sys_prompt,\n",
-    "    custom_prompt_template=custom_prompt_template,\n",
-    "    custom_completion_template=custom_completion_template,\n",
-    "    add_eos_token=True\n",
-    ")\n",
-    "\n",
-    "sft_dataloader = DataLoader(\n",
-    "    sft_dataset,\n",
-    "    batch_size=16,\n",
-    "    shuffle=True,\n",
-    "    drop_last=True,\n",
-    "    collate_fn=LatentAdversarialTrainingDataCollator(\n",
-    "        tokenizer.pad_token_id,\n",
-    "        truncate_length=2048\n",
-    "    )\n",
-    ")"
+    "dataloader = iter(lat_dataloader)\n",
+    "batch = next(dataloader)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "## Trainer"
+   "source": "## Clean Performance"
   },
   {
    "cell_type": "code",
@@ -216,60 +194,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with torch.no_grad():\n",
-    "    if run_start_evals:\n",
-    "        pre_train_evals = run_attack_evals(\n",
-    "            model,\n",
-    "            model_type=model_type,\n",
-    "            verbose=False,\n",
-    "        )\n",
-    "        \n",
-    "peft_config = LoraConfig(\n",
-    "    r=64,\n",
-    "    target_modules=[\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\", \"up_proj\", \"down_proj\"],\n",
+    "outputs = model.generate(\n",
+    "    batch[\"adv_tokens\"][[0]].to(\"cuda\"),\n",
+    "    max_length=batch[\"adv_tokens\"].shape[1] + 200,\n",
     ")\n",
     "\n",
-    "model = get_peft_model(model, peft_config)\n",
-    "\n",
-    "def eval_and_log(result, epoch):\n",
-    "    wandb.log(result) \n",
-    "\n",
-    "pgd_trainer = ProjectedGradLAT(\n",
-    "    model=model,\n",
-    "    dataloader=lat_dataloader,\n",
-    "    sft_dataloader=sft_dataloader,\n",
-    "    adv_loss_coefs={\n",
-    "        \"toward\":   0.5, \n",
-    "        \"away\":    0.5,\n",
-    "    },\n",
-    "    def_loss_coefs={\n",
-    "        \"sft_toward\":  2,\n",
-    "        \"sft_away\":    0,\n",
-    "        \"toward\":    0.5,\n",
-    "        \"away\":      0.5,\n",
-    "    },\n",
-    "    pgd_layers=[\"embedding\", 8, 16, 24, 30],\n",
-    "    pgd_iterations_per_step=16,\n",
-    "    model_layers=list(range(0, model.config.num_hidden_layers)),\n",
-    "    epsilon=6.0,\n",
-    "    inner_learning_rate=1e-3,\n",
-    "    outer_learning_rate=2e-5,\n",
-    "    init_callback=eval_and_log,\n",
-    "    post_def_callback=eval_and_log,\n",
-    "    model_iterations_per_step=4,\n",
-    "    num_steps=100,\n",
-    "    max_batch_per_acc=4,\n",
-    "    only_train_lora=True,\n",
-    "    l2_regularization=0,\n",
-    "    model_layers_module=\"model.layers\",\n",
-    "    reinitialize_dev_optim=True\n",
-    ")"
+    "prompt = tokenizer.decode(batch[\"adv_tokens\"][0]).replace('\\n', '')\n",
+    "print(\"Prompt:\\n\" + prompt)\n",
+    "print()\n",
+    "prompt_response = tokenizer.decode(outputs[0]).replace('\\n', '')\n",
+    "print(\"Completion:\\n\" + prompt_response[len(prompt):])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "## Run!"
+   "source": "## Latent Space Attack"
   },
   {
    "cell_type": "code",
@@ -277,8 +217,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pgd_trainer.train(project_name=\"jailbreaks_test\")\n",
-    "# pgd_trainer.model.save_pretrained(\"jailbreaks_test_save\")"
+    "losses, wrappers = projected_gradient_descent(\n",
+    "    batch=batch,  # batch\n",
+    "    model=model,  # model\n",
+    "    model_layers_module=\"model.layers\",  # where the model layers are\n",
+    "    layer=[\"embedding\", 8, 16, 24, 30],  # layers to attack\n",
+    "    epsilon=6.0,  # attack l2 constraint\n",
+    "    l2_regularization=0.0,  # coef for l2 penalty on the attack\n",
+    "    learning_rate=1e-3,  # attack step size\n",
+    "    pgd_iterations=32,  # number of PGD iters\n",
+    "    loss_coefs={\"toward\": 0.5, \"away\": 0.5,},  # coefficients for the attack's toward and away losses\n",
+    "    log_loss=True,  # whether to use a log loss instead of a crossentropy one\n",
+    "    device=\"cuda\",\n",
+    ")"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Attacked Performance"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "for wrapper in wrappers:\n",
+    "    wrapper.enabled = True  # the wrappers should already be enabled, so this is redundant\n",
+    "\n",
+    "outputs = model.generate(\n",
+    "    batch[\"adv_tokens\"].to(\"cuda\"),\n",
+    "    max_length=batch[\"adv_tokens\"].shape[1] + 200,\n",
+    ")\n",
+    "\n",
+    "prompt = tokenizer.decode(batch[\"adv_tokens\"][0]).replace('\\n', '')\n",
+    "print(\"Prompt:\\n\" + prompt)\n",
+    "print()\n",
+    "prompt_response = tokenizer.decode(outputs[0]).replace('\\n', '')\n",
+    "print(\"Completion:\\n\" + prompt_response[len(prompt):])"
    ]
   }
  ],
