--- a/notebooks/jailbreaks.ipynb
+++ b/notebooks/jailbreaks.ipynb
@@ -19,18 +19,14 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
+    "\n",
     "import os\n",
     "import torch\n",
-    "import wandb\n",
     "import sys\n",
-    "\n",
     "from dotenv import load_dotenv\n",
     "from torch.utils.data import DataLoader\n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "from peft import get_peft_model, LoraConfig\n",
-    "\n",
-    "load_dotenv()\n",
-    "hf_access_token = os.getenv(\"HUGGINGFACE_API_KEY\")\n",
     "\n",
     "os.chdir(\"../\")\n",
     "cwd = os.getcwd()\n",
@@ -39,12 +35,15 @@
     "\n",
     "from latent_at import *\n",
     "from tasks.harmbench.HarmBenchTask import HarmBenchTask\n",
-    "from tasks.harmbench.FastHarmBenchEvals import run_attack_evals"
+    "from tasks.harmbench.FastHarmBenchEvals import run_attack_evals\n",
+    "\n",
+    "load_dotenv()\n",
+    "hf_access_token = os.getenv(\"HUGGINGFACE_API_KEY\")"
    ]
   },
   {
    "metadata": {},
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "source": [
     "## Configuration\n",
     "\n",
@@ -179,7 +178,7 @@
     "    )\n",
     ")\n",
     "\n",
-    "# interleaving supervised finetuning with LAT stablizes training\n",
+    "# interleaving supervised finetuning with LAT stabilizes training\n",
     "sft_dataset = process_generic_chat_dataset(\n",
     "    tokenizer,\n",
     "    dataset=\"abhayesian/ultrachat-first-response-long\",\n",
@@ -231,38 +230,25 @@
     "\n",
     "model = get_peft_model(model, peft_config)\n",
     "\n",
-    "def eval_and_log(result, epoch):\n",
-    "    wandb.log(result) \n",
-    "\n",
     "pgd_trainer = ProjectedGradLAT(\n",
-    "    model=model,\n",
-    "    dataloader=lat_dataloader,\n",
-    "    sft_dataloader=sft_dataloader,\n",
-    "    adv_loss_coefs={\n",
-    "        \"toward\":   0.5, \n",
-    "        \"away\":    0.5,\n",
-    "    },\n",
-    "    def_loss_coefs={\n",
-    "        \"sft_toward\":  2,\n",
-    "        \"sft_away\":    0,\n",
-    "        \"toward\":    0.5,\n",
-    "        \"away\":      0.5,\n",
-    "    },\n",
-    "    pgd_layers=[\"embedding\", 8, 16, 24, 30],\n",
-    "    pgd_iterations_per_step=16,\n",
-    "    model_layers=list(range(0, model.config.num_hidden_layers)),\n",
-    "    epsilon=6.0,\n",
-    "    inner_learning_rate=1e-3,\n",
-    "    outer_learning_rate=2e-5,\n",
-    "    init_callback=eval_and_log,\n",
-    "    post_def_callback=eval_and_log,\n",
-    "    model_iterations_per_step=4,\n",
-    "    num_steps=100,\n",
-    "    max_batch_per_acc=4,\n",
-    "    only_train_lora=True,\n",
-    "    l2_regularization=0,\n",
-    "    model_layers_module=\"model.layers\",\n",
-    "    reinitialize_dev_optim=True\n",
+    "    model=model,  # model\n",
+    "    dataloader=lat_dataloader,  # dataloader for lat\n",
+    "    sft_dataloader=sft_dataloader,  # dataloader for supervised finetuning\n",
+    "    adv_loss_coefs={\"toward\": 0.5, \"away\": 0.5,},  # adversary's loss coefs\n",
+    "    def_loss_coefs={\"sft_toward\": 2, \"sft_away\": 0, \"toward\": 0.5, \"away\": 0.5,},  # model's loss coefs\n",
+    "    pgd_layers=[\"embedding\", 8, 16, 24, 30],  # what layers to attack\n",
+    "    pgd_iterations_per_step=16,  # how many steps of projected gradient descent to do\n",
+    "    model_layers=list(range(0, model.config.num_hidden_layers)),  # model layers to train\n",
+    "    epsilon=6.0,  # attack l2 constraint\n",
+    "    inner_learning_rate=1e-3,  # adversary lr\n",
+    "    outer_learning_rate=2e-5,  # model lr\n",
+    "    model_iterations_per_step=4,  # how many times to train on each step\n",
+    "    num_steps=100,  # number of epochs\n",
+    "    max_batch_per_acc=4,  # max size of a minibatch\n",
+    "    only_train_lora=True,  # train using low rank adapters\n",
+    "    l2_regularization=0,  # coef for l2 weight regularization\n",
+    "    model_layers_module=\"model.layers\",  # where the model layers are\n",
+    "    reinitialize_dev_optim=True  # whether to reinitialize optimizer every lat step\n",
     ")"
    ]
   },
