--- a/notebooks/backdoors.ipynb
+++ b/notebooks/backdoors.ipynb
@@ -24,22 +24,17 @@
     "\n",
     "import os\n",
     "import torch\n",
-    "import tqdm as tqdm\n",
-    "import wandb\n",
     "import sys\n",
     "import huggingface_hub\n",
-    "\n",
     "from dotenv import load_dotenv\n",
     "from torch.utils.data import DataLoader\n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "from peft import get_peft_model, LoraConfig\n",
     "\n",
     "os.chdir(\"../\")\n",
-    "\n",
     "cwd = os.getcwd()\n",
     "if cwd not in sys.path:\n",
     "    sys.path.insert(0, cwd)\n",
-    "\n",
     "from latent_at import *\n",
     "\n",
     "load_dotenv()\n",
@@ -63,16 +58,13 @@
    "execution_count": null,
    "source": [
     "model_id = 0  # should be a value 0-4 and indicates which of the 5 trojaned models to use\n",
-    "device_id = 0\n",
     "use_lat = True\n",
     "use_backdoors = False\n",
-    "save_folder = \"./model_saves\"\n",
     "\n",
     "# Print the settings for confirmation\n",
     "print(f\"Using trojaned model number {model_id+1}\")\n",
     "print(f\"Using LAT with DPO: {use_lat}\")\n",
     "print(f\"Using proxy backdoors from team Cod: {use_backdoors}\")\n",
-    "print(f\"Model save folder: {save_folder}\")\n",
     "\n",
     "poisoned_models = [\n",
     "    {\n",
@@ -107,7 +99,7 @@
     "    },\n",
     "]\n",
     "\n",
-    "device = f\"cuda:{device_id}\"\n",
+    "device = f\"cuda\"\n",
     "model_cfg = poisoned_models[model_id]\n",
     "\n",
     "tokenizer_name = model_cfg[\"tokenizer\"]\n",
@@ -146,7 +138,6 @@
     "    use_tokenizer_template=False,\n",
     "    map_fn=map_fn,\n",
     ")\n",
-    "\n",
     "lat_dataloader = DataLoader(\n",
     "    lat_dataset,\n",
     "    batch_size=16,\n",
@@ -158,6 +149,7 @@
     "    )\n",
     ")\n",
     "\n",
+    "# interleaving supervised finetuning with LAT stabilizes training\n",
     "sft_dataset = process_generic_chat_dataset(\n",
     "    tokenizer=tokenizer,\n",
     "    dataset=\"Baidicoot/anthropic-hh-rlhf\",\n",
@@ -168,7 +160,6 @@
     "    filter_len=512,\n",
     "    use_tokenizer_template=False,\n",
     ")\n",
-    "\n",
     "sft_dataloader = DataLoader(\n",
     "    sft_dataset,\n",
     "    batch_size=16,\n",
@@ -212,12 +203,7 @@
     "\n",
     "model_steps_per_batch = 4 if use_lat else 1\n",
     "num_steps = 256 if use_lat else 1024 \n",
-    "pgd_iterations_per_step = 16 if use_lat else 0\n",
-    "\n",
-    "def log_and_save_ckpt(result, epoch):\n",
-    "    wandb.log(result)\n",
-    "    if (epoch+1) % (num_steps // 4) == 0 and epoch != -1:\n",
-    "        model.save_pretrained(f\"run_checkpoints/{save_folder}/{model_name.split('/')[-1]}_{epoch+1}\")\n"
+    "pgd_iterations_per_step = 16 if use_lat else 0\n"
    ]
   },
   {
@@ -232,37 +218,25 @@
    "outputs": [],
    "source": [
     "pgd_trainer = ProjectedGradLAT(\n",
-    "    model=model,\n",
-    "    dataloader=lat_dataloader,\n",
-    "    sft_dataloader=sft_dataloader,\n",
-    "    adv_loss_coefs={\n",
-    "        \"toward\": 0,\n",
-    "        \"away\": 0,\n",
-    "        \"dpo\": 1,\n",
-    "    },\n",
-    "    def_loss_coefs={\n",
-    "        \"toward\": 0,\n",
-    "        \"away\":   0,\n",
-    "        \"dpo\":    1,\n",
-    "        \"sft\":    0,\n",
-    "        \"sft_dpo\": 1,\n",
-    "    },\n",
-    "    pgd_layers=[4, 12, 20, 28],\n",
-    "    pgd_iterations_per_step=pgd_iterations_per_step,\n",
-    "    model_layers=list(range(0, model.config.num_hidden_layers)),\n",
-    "    epsilon=1.5,\n",
-    "    inner_learning_rate=5e-2,\n",
-    "    outer_learning_rate=2e-5,\n",
-    "    init_callback=log_and_save_ckpt,\n",
-    "    post_def_callback=log_and_save_ckpt,\n",
-    "    model_iterations_per_step=model_steps_per_batch,\n",
-    "    num_steps=num_steps,\n",
-    "    max_batch_per_acc=4,\n",
-    "    only_train_lora=True,\n",
-    "    l2_regularization=0,\n",
-    "    model_layers_module=\"base_model.model.model.layers\",\n",
-    "    reinitialize_dev_optim=False,\n",
-    "    device=device\n",
+    "    model=model,  # model\n",
+    "    dataloader=lat_dataloader,  # dataloader for lat\n",
+    "    sft_dataloader=sft_dataloader,  # dataloader for supervised finetuning\n",
+    "    adv_loss_coefs={\"toward\": 0, \"away\": 0, \"dpo\": 1,},  # adversary's loss coefs\n",
+    "    def_loss_coefs={\"toward\": 0, \"away\": 0, \"dpo\": 1, \"sft\": 0, \"sft_dpo\": 1,},  # model's loss coefs\n",
+    "    pgd_layers=[4, 12, 20, 28],  # what layers to attack\n",
+    "    model_layers=list(range(0, model.config.num_hidden_layers)),  # model layers to train\n",
+    "    epsilon=1.5,  # attack l2 constraint\n",
+    "    inner_learning_rate=5e-2,  # adversary lr\n",
+    "    outer_learning_rate=2e-5,  # model lr\n",
+    "    pgd_iterations_per_step=pgd_iterations_per_step,  # how many steps of projected gradient descent to do\n",
+    "    model_iterations_per_step=model_steps_per_batch,  # how many times to train on each step\n",
+    "    num_steps=num_steps,  # number of epochs\n",
+    "    max_batch_per_acc=4,  # max size of a minibatch\n",
+    "    only_train_lora=True,  # train using low rank adapters\n",
+    "    l2_regularization=0,  # coef for l2 weight regularization\n",
+    "    model_layers_module=\"base_model.model.model.layers\",  #  where the model layers are\n",
+    "    reinitialize_dev_optim=False,  # whether to reinitialize optimizer every lat step\n",
+    "    device=device  # device\n",
     ")"
    ]
   },
