--- a/notebooks/wmdp_ga_lat.ipynb
+++ b/notebooks/wmdp_ga_lat.ipynb
@@ -367,7 +367,7 @@
    "source": [
     "run_lat = WMDPProjectedGradLAT(\n",
     "    model,\n",
-    "    dataloader=bio_dataloader,\n",
+    "    dataloader=bio_dataloader if config.use_just_bio else cyber_dataloader,\n",
     "    pgd_layers=config.adv_optim.pgd_layers,\n",
     "    model_layers=config.model_layers,\n",
     "    epsilon=config.adv_optim.epsilon,\n",
